--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>it.blog.microservice</groupId>
 	<artifactId>SpringMicroServiceBooking</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>SpringMicroServiceBooking</name>
